--- a/components/Estates/EstateCard.module.scss
+++ b/components/Estates/EstateCard.module.scss
@@ -2,6 +2,15 @@
   cursor: pointer;
 }
 
+.link {
+  text-decoration: none;
+  color: #444;
+  :hover {
+    text-decoration: none;
+    color: #444;
+  }
+}
+
 .cardBody {
   padding-top: 0;
   padding-bottom: 0;
@@ -14,6 +23,10 @@
   border-bottom-right-radius: 0;
   max-height: 250px;
   object-fit: cover;
+  transition: transform 0.5s ease;
+  &:hover {
+    transform: scale(0.99);
+  }
 }
 
 @media (min-width: 768px) {
@@ -40,4 +53,8 @@
   margin-top: 10px;
   margin-bottom: 10px;
   font-weight: 600;
+}
+
+.descriptionContainer {
+  text-align: center;
 }
